# Projects

pdfmaster-hybrid/: Makefile  README.md  setup.sh
pdfmaster-hybrid/.github/workflows/: release.yml
pdfmaster-hybrid/ci/: payload_packer.sh
pdfmaster-hybrid/cmake/: FindMuPDF.cmake  FindQPDF.cmake
pdfmaster-hybrid/docs/: ARCHITECTURE.md  PACKAGING.md  USER_MANUAL.md
pdfmaster-hybrid/engine/: CMakeLists.txt
pdfmaster-hybrid/engine/include/: pdfengine.h
pdfmaster-hybrid/engine/src/bridge/: pdfengine_c.cpp
pdfmaster-hybrid/engine/src/core/: PdfCompressor.cpp  PdfCompressor.h  PdfDocument.cpp  PdfDocument.h  PdfMerger.cpp  PdfMerger.h  PdfSplitter.cpp  PdfSplitter.h
pdfmaster-hybrid/go/: go.mod
pdfmaster-hybrid/go/cmd/pdfmaster/: cmd_compress.go  cmd_info.go  cmd_merge.go  cmd_split.go  cmd_text.go  cmd_view.go  root.go
pdfmaster-hybrid/go/internal/bridge/: bridge.go
pdfmaster-hybrid/go/internal/config/: config.go
pdfmaster-hybrid/go/internal/ops/: compress.go  merge.go  split.go  view.go
pdfmaster-hybrid/go/internal/progress/: progress.go
pdfmaster-hybrid/launcher/: go.mod
pdfmaster-hybrid/launcher/cmd/launcher/: main.go
pdfmaster-hybrid/launcher/internal/selfextract/: selfextract.go
pdfmaster-hybrid/launcher/internal/setup/: setup.go
pdfmaster-hybrid/launcher/internal/syscheck/: syscheck.go
pdfmaster-hybrid/launcher/internal/ui/: setup_ui.go
pdfmaster-hybrid/packaging/linux/: build_appimage.sh
pdfmaster-hybrid/packaging/linux/appimage/: AppRun  pdfmaster.desktop
pdfmaster-hybrid/packaging/windows/: build_installer.bat
pdfmaster-hybrid/packaging/windows/nsis/: pdfmaster.nsi
